fixed margin right issue on mobile

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -32,7 +32,6 @@ main {
         @include mobile {
             width: 100%;
             height: 80%;
-            width : 100%;
         }
         }
             button {
@@ -41,9 +40,6 @@ main {
             box-shadow: 0px 0px 2px #b4b4b5;
         }
         
-        @include mobile {
-            width: 95%;
-        }  
     }
     .mode {
         position: fixed;
